--- a/PROJETO/Controle_estoque.dproj
+++ b/PROJETO/Controle_estoque.dproj
@@ -133,6 +133,10 @@
             <Form>Frm_Produto</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="..\FORMS\U_FORMA_PGTO.pas">
+            <Form>Frm_Forma_Pgto</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
