--- a/PROJETO/Controle_estoque.dproj
+++ b/PROJETO/Controle_estoque.dproj
@@ -159,6 +159,14 @@
             <Form>Frm_Pesquisa_Produto</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="..\FORMS\U_MOVIMENTO_PADRAO.pas">
+            <Form>Frm_movimento_padrao</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="..\FORMS\U_MOVIMENTO_COMPRA.pas">
+            <Form>Frm_movimento_compra</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -187,7 +195,7 @@
                 </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="3">
-                <DeployFile LocalName="Win32\Debug\Controle_estoque.exe" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="..\EXE\Controle_estoque.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>Controle_estoque.exe</RemoteName>
                         <Overwrite>true</Overwrite>
